--- a/_configs/discovery.properties
+++ b/_configs/discovery.properties
@@ -1,10 +1,6 @@
-
-server.port = 8761
-
+server.port=8761
 # To avoid registering Eureka server to itself/discovery
-eureka.client.registerWithEureka = false
-eureka.client.fetchRegistry = false
-
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
 eureka.instance.hostname=localhost
-
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
