Eureka working with config server

--- a/config/src/main/resources/application.properties
+++ b/config/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8888
 spring.application.name=config
-spring.cloud.config.server.git.uri=D:/Projects/Spring-cloud-micro-services/_configs
+spring.cloud.config.server.git.uri=file:///D:/Projects/Spring-cloud-micro-services/_configs
 
 eureka.client.region = default
 eureka.client.registryFetchIntervalSeconds=5
